--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
