--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	code {
+		background-color: rgb(15 23 42);
+		border-radius: 0.25rem;
+		padding: 0.25rem;
+	}
+
+	.explain-paragraph {
+		@apply text-2xl text-slate-400;
+	}
+
+	hr {
+		@apply block h-1 border-2 border-slate-700;
+	}
+	/* ... */
+}
